@@ -37,6 +37,7 @@ import org.meandre.webservices.servlets.WSPublicServlet;
 import org.meandre.webservices.servlets.WSPublishServlet;
 import org.meandre.webservices.servlets.WSRepositoryServlet;
 import org.meandre.webservices.servlets.WSSecurityServlet;
+import org.meandre.webservices.tools.WSRedirectionServlet;
 import org.mortbay.jetty.Server;
 import org.mortbay.jetty.security.Constraint;
 import org.mortbay.jetty.security.ConstraintMapping;
@@ -320,7 +321,6 @@ public class MeandreServer {
 		// Adding the publicly provided services
 		//
 		contextWS.addServlet(new ServletHolder((Servlet) new WSPublicServlet(store,cnf)), "/public/services/*");
-		contextWS.addServlet(new ServletHolder((Servlet) new WSAuxiliarServlet(store,cnf)), "/public/auxiliar/*");
 		
 		//
 		// Adding restrictedly provided services
@@ -331,6 +331,10 @@ public class MeandreServer {
 		contextWS.addServlet(new ServletHolder((Servlet) new WSExecuteServlet(store,cnf)),		"/services/execute/*");
 		contextWS.addServlet(new ServletHolder((Servlet) new WSPublishServlet(store,cnf)),		"/services/publish/*");
 		contextWS.addServlet(new ServletHolder((Servlet) new WSSecurityServlet(store,cnf)),		"/services/security/*");
+
+		contextWS.addServlet(new ServletHolder((Servlet) new WSAuxiliarServlet(store,cnf)),     "/services/auxiliar/*");
+		
+
 		
 		return contextWS;
 	}
